# geometry

./: .gitignore  .hgignore  CMakeLists.txt  catkin.cmake  foo  rosdep.yaml  stack.xml  stack.yaml
angles/: CMakeLists.txt  catkin.cmake
bullet/: CMakeLists.txt  Makefile.bullet  manifest.xml  rosdoc.yaml
eigen/: Makefile  eigen-3.0prebeta3.tar.bz2.md5sum  manifest.xml
eigen/scripts/: e2_to_eigen2support.sh  recursive_eigen2_port.sh
eigen3/: Makefile  eigen3.0-beta2.tar.bz2.md5sum  manifest.xml
eigen3/scripts/: rename_eigen_namespace  revert_eigen_namespace
eigen_conversions/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
eigen_conversions/include/eigen_conversions/: eigen_kdl.h  eigen_kdl_by_value.h  eigen_msg.h  eigen_msg_by_value.h
eigen_conversions/src/: eigen_kdl.cpp  eigen_msg.cpp
geometry/: CHANGELOG.rst  package.xml
kdl/: CMakeLists.txt  Makefile  geometric_primitives.rst  kdl-30401.tar.gz.md5sum  total.patch
kdl_conversions/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
kdl_conversions/include/kdl_conversions/: kdl_msg.h  kdl_msg_by_value.h
kdl_conversions/src/: kdl_msg.cpp
tf/: CHANGELOG.rst  CMakeLists.txt  catkin.cmake  conf.py  manifest.xml  package.xml  setup.py  static_transform_publisher_params_test.launch  static_transform_publisher_params_test.yaml
tf/cfg/: TransformSender.cfg
tf/include/tf/: message_filter.h  tf.h  time_cache.h  transform_datatypes.h  transform_listener.h
tf/include/tf/LinearMath/: Matrix3x3.h  MinMax.h  QuadWord.h  Quaternion.h  Scalar.h  Transform.h  Vector3.h  btMinMax.h
tf/scripts/: bullet_migration_sed.py  python_benchmark.py  tf_remap  view_frames
tf/src/: cache.cpp  empty_listener.cpp  pytf.cpp  static_transform_publisher.cpp  tf.cpp  tf_echo.cpp  tf_monitor.cpp  transform_listener.cpp
tf/src/tf/: __init__.py  broadcaster.py  listener.py  tfwtf.py  transformations.py  transformations.rst
tf/test/: cache_unittest.cpp  method_test.py  operator_overload.cpp  python_debug_test.py  quaternion.cpp  quaternion_axis_angle.cpp  speed_test.cpp  testBroadcaster.cpp  testPython.py  test_message_filter.cpp  test_transform_datatypes.cpp  tf_benchmark.cpp  tf_unittest.cpp  tf_unittest_future.cpp  transform_listener_unittest.cpp  transform_twist_test.cpp  velocity_test.cpp
tf2/src/: buffer_core.cpp
tf_conversions/: CHANGELOG.rst  CMakeLists.txt  conf.py  manifest.xml  package.xml
tf_conversions/include/tf_conversions/: tf_eigen.h  tf_eigen_by_value.hpp  tf_kdl.h
tf_conversions/src/: tf_eigen.cpp  tf_kdl.cpp
tf_conversions/src/tf_conversions/: __init__.py  posemath.py
tf_conversions/test/: test_eigen_tf.cpp  test_kdl_tf.cpp
