<package>
  <name>eigen_conversions</name>
  <version>1.13.0</version>
  <description>

     Conversion functions between:
      - Eigen and KDL
      - Eigen and geometry_msgs.

  </description>
  <author>Stuart Glaser</author>
  <author>Adam Leeper</author>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/eigen_conversions</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>liborocos-kdl-dev</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>liborocos-kdl</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
