<package>
  <name>tf</name>
  <version>1.9.15</version>
  <description brief='Transform Library'>

tf is a package that lets the user keep track of multiple coordinate
frames over time. tf maintains the relationship between coordinate
frames in a tree structure buffered in time, and lets the user
transform points, vectors, etc between any two coordinate frames at
any desired point in time.

  </description>
  <author>Tully Foote</author>
  <author>Eitan Marder-Eppstein</author>
  <author>Wim Meeussen</author>
  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>

  <license>BSD</license>
  <url>http://www.ros.org/wiki/tf</url>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <export>
    <roswtf plugin="tf.tfwtf" />
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
